fix: justify social when on mobile

--- a/assets/styles/crisp.css
+++ b/assets/styles/crisp.css
@@ -170,10 +170,15 @@ header #logo img {
 }
 #follow-icons {
 	display: flex;
-	align-items: baseline;
+	align-items: center;
 	font-size: 0.7em;
 	margin-top: -0.7em;
 	margin-bottom: 1.5em;
+}
+@media only screen and (max-width: 800px) {
+	#follow-icons {
+		justify-content: center;
+	}
 }
 #follow-icons a {
 	color: #ccc;
